# fsd

./: CMakeLists.txt  README.md  dockerfile
.github/workflows/: docker-image.yml
app/: fsd.conf  log.txt
app/config/: cert.txt  log.txt
src/: fsdpaths.h  global.h
